fix: remove margin from image card for improved alignment

--- a/style.css
+++ b/style.css
@@ -896,7 +896,6 @@ footer {
   .image-card{
     max-width: 300px;
     height: auto;
-    margin: 0px auto;
   }
 
   .image-card img{
